@@ -209,6 +209,9 @@
     ["bullet_list_item" , {
       "parent": "bodytext"
     }],
+    ["item_list_item" , {
+      "parent": "bodytext"
+    }],
     ["enumerated_list" , {
       "parent": "bodytext",
       "spaceBefore": 0
@@ -504,10 +507,10 @@
     ["pygments-il", {"textColor": "#666666", "parent": "code"}],
     
     ["item_list", { 
+      "parent": "bodytext",
+      "spaceBefore": 0,
       "commands": [
             [ "VALIGN", [ 0, 0 ], [ -1, -1 ], "TOP" ], 
-            [ "TOPPADDING", [ 0, 0 ], [ -1, -1 ], 0 ], 
-            [ "BOTTOMPADDING", [ 0, 0 ], [ -1, -1 ], 0 ], 
             [ "RIGHTPADDING", [ 0, 0 ], [ 1, -1 ], 0 ] 
         ],
         "colWidths": ["20pt",null]
@@ -515,7 +518,7 @@
     ["bullet_list", {
       "parent": "bodytext",
       "spaceBefore": 0,
-       "commands": [
+      "commands": [
             [ "VALIGN", [ 0, 0 ], [ -1, -1 ], "TOP" ],
             [ "RIGHTPADDING", [ 0, 0 ], [ 1, -1 ], 0 ] 
         ], 
